--- a/templates/map-canvas.html
+++ b/templates/map-canvas.html
@@ -37,9 +37,16 @@
             <input type="text" id="mapCanvasSceneName" name="sceneName" placeholder="SceneName">
             <input type="button" onClick="updateScene()" value="Update Scene">
             <input type="button" onClick="generateScene()" value="Generate Scene">
+            <input type="button"  id ="generate-surrounding" value = "Generate Expanded Scene">
             <input type="button" onClick="toggleLabels()" value="Labels">
-            <button type="button" id="maximize-map">Maximize</button>
+            <input type="button"  id ="move-left" value = "Move Left">
+            <input type="button"  id ="move-right" value = "Move Right">
+            <input type="button"  id ="move-down" value = "Move Down">
+            <input type="button"  id ="move-up" value = "Move Up">
+            
+            <input type="button"  id ="maximize" value = "Maximize Window">
         </div>
+      
         <div class="mapPortal" id="mapPortal"></div>
     </div>
 </form>
