--- a/templates/map-canvas.html
+++ b/templates/map-canvas.html
@@ -1,4 +1,3 @@
-
 <style>
     #loadingIndicator {
         display: none; /* Hidden initially */
@@ -14,18 +13,25 @@
         align-items: center;
     }
 
+    .spinner {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        border-left-color: #09f;
+        animation: spin 1s ease infinite;
+    }
+
     @keyframes spin {
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
     }
-</style>
 
-<style>
     #mapPortal {
         position: relative;
         padding-bottom: 75%;
-        height: 100vh;<input type="button" onClick="updateScene()" value="Update Scene">
-        overflow: hidden;
+        height: 100vh;
+        /*overflow: hidden;*/
     }
 
     #mapPortal iframe {
@@ -49,33 +55,21 @@
         align-self: end;
         max-width: 30px;
     }
+
+    /*#inputHolder {*/
+    /*    display: flex;*/
+    /*    flex-wrap: wrap;*/
+    /*    flex-direction: row-reverse;*/
+    /*    justify-content: start;*/
+    /*    align-items: auto;*/
+    /*    align-content: start;*/
+
+    /*    input {*/
+    /*        flex: 0 0 auto;*/
+    /*        !*margin: 10px;*!*/
+    /*    }*/
+    /*}*/
 </style>
-
-<div id="loadingIndicator" style="display: none;">
-    <!-- Simple CSS Spinner -->
-    <div class="spinner"></div>
-</div>
-
-<style>
-.spinner {
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    border-left-color: #09f;
-    animation: spin 1s ease infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-</style>
-
 
 <form id="mapPortalForm">
     <div id="mapCanvasContainer">
@@ -83,36 +77,25 @@
             <!-- Simple CSS Spinner -->
             <div class="spinner"></div>
         </div>
-        <div id="inputHolder" style="display: flex">
-            <input type="text" id="mapCanvasZoomLevel" value="" placeholder="z" style="align-self: flex-start" disabled>
+        <div id="inputHolder" style="display: inline-flex">
+            <input type="text" id="mapCanvasZoomLevel" value="" placeholder="z" disabled>
             <input type="text" id="mapCanvasSearchBox" name="placesSearch" placeholder="Search">
             <input type="text" id="mapCanvasSceneName" name="sceneName" placeholder="SceneName">
-            <input type="button" onClick="updateScene()" value="Update Scene">
-            <input type="button" onClick="generateScene()" value="Generate Scene">
-            <input type="button" id="generate-surrounding" value="Generate Expanded Scene">
-            <input type="button" onClick="toggleLabels()" value="Labels">
-            <input type="button" id="move-left" value="Move Left">
-            <input type="button" id="move-right" value="Move Right">
-            <input type="button" id="move-down" value="Move Down">
-            <input type="button" id="move-up" value="Move Up">
-            <input type="text" id="longMult" name="sceneName" placeholder="Longitutde Multiplier" value ="1.76">
-            <input type="text" id="latMult" name="sceneName" placeholder="Latitude Multiplier" value =".568">
-            <input type="button" id="maximize" value="Maximize Window">
+            <input type="button" id="mapCanvasUpdateScene" value="Update Scene">
+            <input type="button" id="mapCanvasGenerateScene" value="Generate Scene">
+            <input type="button" id="mapCanvasGenerateExpandedScene" value="Generate Expanded Scene">
+            <input type="button" id="mapCanvasToggleLabels" value="Labels">
+            <input type="button" id="mapCanvasMoveLeft" value="Move Left" style="display: none;">
+            <input type="button" id="mapCanvasMoveRight" value="Move Right" style="display: none;">
+            <input type="button" id="mapCanvasMoveDown" value="Move Down" style="display: none;">
+            <input type="button" id="mapCanvasMoveUp" value="Move Up" style="display: none;">
+            <input type="text" id="mapCanvasLongMult"value ="1.76" style="display: none;">
+            <input type="text" id="mapCanvasLatMult" value =".568" style="display: none;">
+            <input type="button" id="mapCanvasMaximize" value="Maximize Window">
         </div>
-      
-        <div class="mapPortal" id="mapPortal"></div>
+        <div class="mapCanvasOptionsMapContainer">
+            <div class="mapPortal" id="mapPortal"></div>
+
+        </div>
     </div>
 </form>
-
-<script type="application/javascript">
-   function generateScene() {
-       Hooks.call('mapCanvasGenerateScene');
-   }
-   function updateScene() {
-       Hooks.call('mapCanvasUpdateScene');
-   }
-   function toggleLabels() {
-       Hooks.call('mapCanvasToggleLabels');
-   }
-</script>
-
