- Code cleanup and consistency updates

--- a/templates/map-canvas.html
+++ b/templates/map-canvas.html
@@ -85,17 +85,16 @@
             <input type="button" id="mapCanvasGenerateScene" value="Generate Scene">
             <input type="button" id="mapCanvasGenerateExpandedScene" value="Generate Expanded Scene">
             <input type="button" id="mapCanvasToggleLabels" value="Labels">
-            <input type="button" id="mapCanvasMoveLeft" value="Move Left" style="display: none;">
-            <input type="button" id="mapCanvasMoveRight" value="Move Right" style="display: none;">
-            <input type="button" id="mapCanvasMoveDown" value="Move Down" style="display: none;">
-            <input type="button" id="mapCanvasMoveUp" value="Move Up" style="display: none;">
-            <input type="text" id="mapCanvasLongMult"value ="1.76" style="display: none;">
-            <input type="text" id="mapCanvasLatMult" value =".568" style="display: none;">
+            <input type="button" id="mapCanvasMoveLeft" value="Move Left">
+            <input type="button" id="mapCanvasMoveRight" value="Move Right">
+            <input type="button" id="mapCanvasMoveDown" value="Move Down">
+            <input type="button" id="mapCanvasMoveUp" value="Move Up">
+            <input type="text" id="mapCanvasLongMult" value ="1.76">
+            <input type="text" id="mapCanvasLatMult" value =".568">
             <input type="button" id="mapCanvasMaximize" value="Maximize Window">
         </div>
         <div class="mapCanvasOptionsMapContainer">
             <div class="mapPortal" id="mapPortal"></div>
-
         </div>
     </div>
 </form>
