- Yanked some dead code - Fix for pollyfill.io disappearing. - Removed the bulk of the extended scene functionality as it wasn't functioning, and I was unwilling to fix and/or maintain it. - Update for v12 SceneData. - Added v12 compatability to module manifest

--- a/templates/map-canvas.html
+++ b/templates/map-canvas.html
@@ -30,7 +30,7 @@
     #mapPortal {
         position: relative;
         padding-bottom: 75%;
-        height: 100vh;
+        /*height: 100vh;*/
         /*overflow: hidden;*/
     }
 
@@ -83,14 +83,7 @@
             <input type="text" id="mapCanvasSceneName" name="sceneName" placeholder="SceneName">
             <input type="button" id="mapCanvasUpdateScene" value="Update Scene">
             <input type="button" id="mapCanvasGenerateScene" value="Generate Scene">
-            <input type="button" id="mapCanvasGenerateExpandedScene" value="Generate Expanded Scene">
             <input type="button" id="mapCanvasToggleLabels" value="Labels">
-            <input type="button" id="mapCanvasMoveLeft" value="Move Left">
-            <input type="button" id="mapCanvasMoveRight" value="Move Right">
-            <input type="button" id="mapCanvasMoveDown" value="Move Down">
-            <input type="button" id="mapCanvasMoveUp" value="Move Up">
-            <input type="text" id="mapCanvasLongMult" value ="1.76">
-            <input type="text" id="mapCanvasLatMult" value =".568">
             <input type="button" id="mapCanvasMaximize" value="Maximize Window">
         </div>
         <div class="mapCanvasOptionsMapContainer">
